# travel-planner-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALIZA_FEEDBACK_KLIENTKI_18_02_2026.md  ANALIZA_UAT_ROUND2_RAPORT_PELNY.md  ARCHITECTURE.md  BUGFIX_GAP_FILLING_19_02_2026.md  BUGFIX_NAN_POI_01_02_2026.md  BUGFIX_PARKING_OVERLAP_19_02_2026.md  BUGFIX_free_entry_logic_16_02_2026.md  BUGFIX_overlapping_events_16_02_2026.md  BUGFIX_time_buffers_16_02_2026.md  BUGFIX_why_selected_16_02_2026.md  CHANGELOG_ETAP3_FINAL.md  CHECKLIST_TEST_PLATNOSCI.md  CLIENT_FEEDBACK_16_02_2026_KAROLINA.md  CLIENT_FEEDBACK_18_02_2026_UAT_KAROLINA.md  CLIENT_FEEDBACK_19_02_2026_UAT_ROUND2.md  CLIENT_FEEDBACK_20_02_2026_UAT_ROUND3_ANALYSIS.md  COLD_START_PROBLEM_03_03_2026.md  CONTEXT_SCOPE_CLARIFICATION_KAROLINA.md  DAY10_STATUS_REPORT.md  DAY7_SWAGGER_TEST_PLAN.md  DEPLOYMENT.md  DZIEN_1_PODSUMOWANIE_FINALNE.md  DZIEN_1_RAPORT_PROBLEMOW.md  Dockerfile  EMAIL_DELIVERY_ETAP1.md  EMAIL_DLA_KAROLINY_ETAP2.md  EMAIL_DLA_KLIENTKI_FRONTEND_PACKAGE.txt  EMAIL_KLIENTKA_ETAP3_NOWY_SCOPE_02_03_2026.md  EMAIL_KLIENTKA_GOTOWE_DO_TESTOWANIA.txt  EMAIL_KLIENTKA_PYTANIE_ROZSZERZENIE.md  EMAIL_KLIENTKA_ROZSZERZENIE_UKONCZONE.md  ETAP1_COMPLETED_SUMMARY.md  ETAP2_API_SPECIFICATION.json  ETAP2_COMPLETION_REPORT.md  ETAP2_CONTEXT_MEMORY.md  ETAP2_DELIVERABLES_README.md  (+302 more)
alembic/: env.py
app/: __init__.py  engine.py
data/: destinations.json  multi_city_attractions.xlsx  zakopane.xlsx  zakopane_backup_fix10_complete_20260429_123205.xlsx
docs/: INFO_FRONTEND_MAP_LEAFLET_FIX220.md  INFO_KLIENTKA_DANE_EXCEL_FIX211.md  INFO_KLIENTKA_FIX221.md  INFO_KLIENTKA_FIX222.md  INFO_KLIENTKA_FIX223.md  INFO_KLIENTKA_FIX224.md  INFO_KLIENTKA_FIX225.md  INFO_KLIENTKA_FIX226.md  INFO_KLIENTKA_FIX227.md  INFO_KLIENTKA_FIX228_API.md  INFO_KLIENTKA_FIX229.md  INFO_KLIENTKA_FIX230.md  INFO_KLIENTKA_FIX231.md  INFO_KLIENTKA_FIX233.md  INFO_KLIENTKA_FIX236_PDF.md  INFO_KLIENTKA_FIX237_PLANNER.md  INFO_KLIENTKA_FIX238_PLANNER.md  INFO_KLIENTKA_FIX239_PLANNER.md  INFO_KLIENTKA_FIX240_WROCLAW.md  INFO_KLIENTKA_FIX241_KRAKOW.md  INFO_KLIENTKA_FIX242_WARSAW.md  INFO_KLIENTKA_FIX243_KATOWICE.md  (+30 more)
(+166 files in other folders)
